<resources>
    <string name="app_name">CamelRaceApp</string>

    <string-array name="spinner">
        <item>@string/spades</item>
        <item>@string/diamonds</item>
        <item>@string/hearts</item>
        <item>@string/clubs</item>
    </string-array>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_blog" translatable="false">Blog</string>
    <string name="navigation_drawer_about" translatable="false">About</string>
    <string name="navigation_drawer_home" translatable="false">Home</string>

    <string name="fragment_about_title" translatable="false">About page!</string>
    <string name="fragment_settings_title" translatable="false">Settings page!</string>
    <string name="fragment_about_desc" translatable="false">Description of the about page.</string>
    <string name="fragment_settings_desc" translatable="false">Settings…</string>
    <string name="fragment_blog_title" translatable="false">Blog page!</string>
    <string name="fragment_blog_desc" translatable="false">Description of blog page.</string>
    <string name="fragment_main_title">Welcome!</string>
    <string name="button_join">Join!</string>
    <string name="enter_name_title">Username</string>
    <string name="hint_username">My Name</string>
    <string name="button_confirm">OK</string>

    <string name="wait_title" translatable="false">The game will start soon…</string>
    <string name="wait_description" translatable="false">Please wait while the host enters all of the required information.</string>

    <string name="button_send">Send!</string>
    <string name="cardpick_title" translatable="false">Pick your card!</string>
    <string name="cardpick_description" translatable="false">Click on a card to select it. When you\'re sure of your decision, hit send!</string>
    <string name="title_game_id">Game ID</string>
    <string name="button_connect">Connect</string>
    <string name="title_connection">Not connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected!</string>
    <string name="enter_bid_title">Bid</string>
    <string name="five" translatable="false">5</string>
    <string name="successful_join">Successfully joined game!</string>
    <string name="invalid_bid_value">Invalid bid value. Use whole numbers.</string>
    <string name="spades">Spades</string>
    <string name="diamonds">Diamonds</string>
    <string name="hearts">Hearts</string>
    <string name="clubs">Clubs</string>
    <string name="unsuccessful_bid">Couldn\'t add your new bid.</string>
    <string name="successful_bid">Successfully handed in new bid!</string>
    <string name="game_started">Game started!</string>
    <string name="game_ended" translatable="false">Game over!</string>
    <string name="navigation_drawer_title" translatable="false">Beautiful title</string>
    <string name="navigation_drawer_subtitle" translatable="false">Beautiful subtitle</string>
    <string name="navigation_drawer_settings" translatable="false">Settings</string>
    <string name="empty_bid">Enter a positive bid.</string>
    <string name="title_ready">I\'m Ready!</string>
    <string name="title_not_ready">I\'m not ready</string>
    <string name="button_ready">Ready!</string>
    <string name="button_not_ready">Not Ready</string>
    <string name="successful_ready">Successfully sent ready.</string>
    <string name="unsuccessful_ready">Could not process ready request.</string>
    <string name="successful_not_ready">Not ready anymore.</string>
    <string name="unsuccessful_not_ready">Could not process unready request.</string>
    <string name="title_racing">Racing!</string>
    <string name="no_bid_set">No bid set! :(</string>
    <string name="placeholder_text">5</string>
    <string name="button_play_again">Play again!</string>
    <string name="alive_failed">Not connected anymore.</string>
    <string name="alive_confirmed">Passed connectivity test.</string>
    <string name="title_default">Default title!</string>
    <string name="result_item_won">You won!</string>
    <string name="result_item_lost">You lost.</string>
    <string name="waiting">Waiting...</string>
    <string name="title_play_again_pending">I\'m ready to play again!</string>
    <string name="title_or">or</string>
    <string name="button_game_mode_hardcore">Hardcore!</string>
    <string name="button_game_mode_normal">Normal</string>
    <string name="placeholder_default">Default</string>
    <string name="title_game_mode_normal">Normal</string>
    <string name="title_game_mode_hardcore">Hardcore!</string>
    <string name="turn_description_my_turn">Your turn!</string>
    <string name="turn_description_my_turn_help">(shake your device)</string>
    <string name="turn_description_not_my_turn">Waiting...</string>
    <string name="turn_description_not_my_turn_help">(it may be someone else\'s turn)</string>
    <string name="button_throw">Throw!</string>
    <string name="button_stop">Stop</string>
    <string name="result_item_someone_else_lost">Someone else lost!</string>
    <string name="stake">Stake was %1$d</string>
</resources>
